[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/kenney_prototypes/assets/colors/light/textures/texture_01.png" type="Texture" id=1]
[ext_resource path="res://scenes/buildings/AssetBuilding.gd" type="Script" id=2]
[ext_resource path="res://scripts/Account.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Nunito/Nunito-Black.ttf" type="DynamicFontData" id=4]

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
flags_world_triplanar = true
albedo_texture = ExtResource( 1 )
roughness = 0.5
uv1_scale = Vector3( 0.125, 0.125, 0.125 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=4]
extents = Vector3( 3, 2.5, 3 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Root:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Root:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.23, 1.3, 1.23 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 96
outline_size = 12
use_filter = true
font_data = ExtResource( 4 )

[node name="AssetBuilding" type="Spatial" groups=["asset_building"]]
script = ExtResource( 2 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 3 )
default_value = 10.0
max_value = 0.0
credit_duration = 3.0

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 2.5, 0, 0, 0, 2, 0, 0, 0, 2.5, 0, 2, 0 )
collision_layer = 9

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 3 )

[node name="Root" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Root"]
transform = Transform( 2.5, 0, 0, 0, 2, 0, 0, 0, 2.5, 0, 2, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
collision_layer = 16
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/hit = SubResource( 5 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0 )
billboard = 1
text = "10"
font = SubResource( 7 )

[connection signal="broke" from="Health" to="." method="_on_Health_broke"]
[connection signal="changed" from="Health" to="." method="_on_Health_changed"]
[connection signal="credit_timeout" from="Health" to="." method="_on_Health_credit_timeout"]
[connection signal="credited" from="Health" to="." method="_on_Health_credited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
